fix bug with jumpy isotope items

--- a/_sass/_12_theme.scss
+++ b/_sass/_12_theme.scss
@@ -58,7 +58,7 @@
   padding: 5px;
   background-color: lighten($grey-1, 5);
   border: 2px solid $grey-9;
-  @include single-transition();
+  transition: border-color 100ms, border-width 100ms linear;
 
   &:hover{
     border-width: 4px;
